--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -17,16 +17,12 @@
             <li>Politics</li>
             <li>Little Stories</li>
         </ul>
-        <article>
-            <time>published: 21.04.2024, 16:16</time>
-            <h2><a href="">Let´s do this!</a></h2>
-            <p>what can we write here??</p>
-        </article>
-        
-        <article>
-            <time>published: 21.04.2024, 16:19</time>
-            <h2><a href="">Let´s post again!</a></h2>
-            <p>what can we write here as well??</p>
-        </article>        
+        {% for post in posts %}
+    <article>
+        <time>published: {{ post.published_date }}</time>
+        <h2><a href="">{{ post.title }}</a></h2>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </article>
+{% endfor %}       
     </body>
 </html>
